--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client/node_modules"
   ],
   "scripts": {
-    "build": "NODE_ENV=production cd client/ && npm install && npm run build",
+    "build": "NODE_ENV=production cd client/ && npm install",
     "start-server": "node index.js"
   },
   "keywords": [],
