--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "client/node_modules"
   ],
   "scripts": {
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "server": "nodemon index.js",
-    "client": "cd client && npm start",
-    "postinstall": "cd client && npm install",
-    "build": "NODE_ENV=production cd client/ && npm install && npm run build",
+    "build": "NODE_ENV=production cd client/ && npm install",
     "start-server": "node index.js"
   },
   "keywords": [],
