--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "server": "nodemon index.js",
     "client": "cd client && npm start",
     "build": "NODE_ENV=production cd client/ && npm install",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "start-server": "node index.js"
   },
   "keywords": [],
