--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "server": "nodemon index.js",
     "client": "cd client && npm start",
-    "build": "NODE_ENV=production cd client/ && npm install",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
+    "postinstall": "cd client && npm install",
+    "build": "NODE_ENV=production cd client/ && npm install && npm run build",
     "start-server": "node index.js"
   },
   "keywords": [],
