--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "server": "nodemon index.js",
     "client": "cd client && npm start",
-    "build1": "NODE_ENV=production cd client/ && npm install && npm run build",
+    "build": "NODE_ENV=production cd client/ && npm install && npm run build",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "start-server": "node index.js"
   },
