--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.1.1",
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
